...
    <string name="title_edit_task">Edit Task</string>
    <string name="message_task_created">Task Created</string>
    <string name="message_task_saved">Task Updated</string>
    <string name="action_text_undo">UNDO</string>
    <string name="save_text_button">SAVE</string>
    <array name="add_task_type_options">
        <item>Product Movement</item>
        <item>Cycle Counting</item>
        <item>General</item>
    </array>
    <array name="add_task_priority_options">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
...
